--- a/scs_website-main/styles/styles.css
+++ b/scs_website-main/styles/styles.css
@@ -87,15 +87,16 @@ Seperating with a comma would select all nav tags and all a tags seperately. */
 nav a {
     color: inherit;
     text-decoration: none;
+    margin-top: 100px;
 }
 
 nav div {
-    size: 100px;
+    size: 10px;
 }
 
 /* This controls the behaviour when you hover over a link in the navbar */
 nav a:hover {
-    text-decoration: underline;
+    text-decoration: none;
     /* transition: margin-right 2s .5s; */
 }
 
@@ -109,6 +110,25 @@ nav a:hover {
     width: 50%;
     justify-content: space-evenly;
 }
+
+#pad-link {
+    padding: 20px;
+}
+
+#pad-link:hover, #pad-link:focus{
+    text-decoration: none;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    background-color: #2E2740ff;
+    transition: all 0.8s ease-out;
+    transition: all 0.8s 0.4s;
+        transition-duration: 0.3s;
+        transition-timing-function: ease;
+        transition-delay: 0.1s;
+        transition-property: all;
+}
+
+
 #about-us-now {
     margin-top: 23%;
     display: flex;
@@ -120,9 +140,53 @@ nav a:hover {
     box-shadow: rgba(0, 0, 0, 0.56) 10px 44px 140px 14px;
 }
 
+#contact-us-now{
+    margin-bottom: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    height: 40px;
+    padding-bottom: 3%;
+    background-color: #2E2740ff;;
+    box-shadow: rgba(0, 0, 0, 0.56) 10px 44px 140px 14px;
+    
+}
+
+#contact-us-text{
+    color: white;
+    position: absolute;
+    left: 2%;
+    width: 10000000px;
+    height: 10px;
+
+}
+
+#contact-discord{
+    position: relative;
+    top: 60%;
+    right: -77%;
+    margin-right: 30%;
+}
+
+#contact-instagram{
+    position: relative;
+    top: 60%;
+    right: -51%;
+    margin-right: 30%;
+}
+
+#contact-linkedin{
+    position: relative;
+    top: 60%;
+    right: -25%;
+    margin-right: 30%;
+}
+
 p{
     color: white;
 }
+
+
 
 .about-us-menu-text {
     /* display: flex; */
@@ -280,10 +344,15 @@ Everything will be offset 3px from the inner borders, but you will now have a bo
     opacity: 99%;
 }
 
-.andrew {
+.about-section {
     width: 100%;
     height: 100%;
-    background-color: red;
+    opacity: 99%;
+}
+
+.contact-us-section{
+    width: 100%;
+    height: 100%;
     opacity: 99%;
 }
 
