--- a/styles/events.css
+++ b/styles/events.css
@@ -6,6 +6,11 @@
     font-size: 45px;
 }
 
+.event_title > p {
+    margin-top: 1em;
+    color: black;
+    font-size: 20px;
+}
 
 .scs_span{
     color: #A78AE1;
@@ -27,8 +32,9 @@
 
 .theme-showcase{
     border-top: 2px solid #A78AE1;
-    margin-top: 4em;
-    padding-top: 2em;
+    border-bottom: 2px solid #A78AE1;
+    margin: 4em;
+    padding: 2em;
 }
 
 .calender-header{
